<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="appName">家庭理财APP</string>
    <string name="input_your_password">请输入你的密码:</string>
    <string name="passworld">请输入密码</string>
    <string name="confirm">确认</string>
    <string name="enter">登录</string>
    <string name="Set">设置</string>


    <string name="main">家庭理财APP</string>
    <string name="app_name">家庭理财APP</string>
    <string name="addoutaccount">新增支出</string>
    <string name="addinaccount">新增收入</string>
    <string name="outaccountinfo">我的支出</string>
    <string name="inaccountinfo">我的收入</string>
    <string name="showinfo">数据管理</string>
    <string name="sysset">系统设置</string>
    <string name="profit">投资收益</string>
    <string name="accountflag">收支便签</string>
    <string name="infomanage">收支管理</string>
    <string name="flagmanage">便签管理</string>
    <string name="help">帮助</string>
    <string name="chart">统计图表</string>
    <string name="statistics_transactions">收支分析</string>
    <string name="InOrOut">选择支出或者收入</string>
    <string name="TotalChart">统计图表</string>
    <string name="user_span">输入指定用户及时间段</string>
    <string name="action_settings">Settings</string>
    <string name="register">注册</string>
    <string name="username">用户名：</string>
    <string name="passwd">密码</string>
    <string name="confirm_passwd">确认密码</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="email">邮箱</string>
    <string name="choose_birthday">选择生日</string>
    <string name="admin">管理员</string>
    <string name="input_username">请输入用户名:</string>
    <string name="new_income">新增收入</string>
    <string name="value">金额：</string>
    <string name="userId">用户：</string>
    <string name="cancel">取消</string>
    <string name="my_income">我的收入</string>
    <string name="modity_trans_type">修改收支类型</string>
    <string name="trans_inout_button_hint">查看收支</string>
    <string name="trans_in_button_hint">只看收入</string>
    <string name="trans_out_button_hint">只看支出</string>
    <string name="is_in_or_out_drop_down">收支：</string>
    <string name="trans_add">新增收支</string>
    <string name="trans_add_money_hint">0.00</string>
    <string name="trans_add_money_title">金额：</string>
    <string name="trans_add_type_title">类别：</string>
    <string name="trans_add_note_title">备注：</string>
    <string name="tform_title">发起转账</string>
    <string name="tform_dest">目标用户：</string>
    <string name="tform_to_accept">待确认</string>
    <string name="tform_accept">接受</string>
    <string name="tform_refuse">拒绝</string>
    <string name="tform_finished">已结束</string>
    <string name="tform_promoted">已发起</string>
    <string name="investment_advice">显示投资建议</string>
    <string name="investment_advise">投资建议</string>
    <string name="new_pay">新增支出</string>
    <string-array name="in_or_out">
        <item>收入</item>
        <item>支出</item>
    </string-array>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>
