<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:minWidth="500dp"
    android:minHeight="700dp"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Dialog"
    tools:context=".activity.login.DialogRegister">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/username"
        android:inputType="text"
        android:shadowColor="@color/purple_200" />

    <EditText
        android:id="@+id/passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/passwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/confirm_passwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/confirm_passwd"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:fontFamily="sans-serif"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:id="@+id/birthday_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/birthday_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:minWidth="80dp"
            android:text="@string/choose_birthday" />

        <TextView
            android:id="@+id/birthday_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/gender_male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:checked="true"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/gender_female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:text="@string/gender_female" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/is_admin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/admin" />

    <LinearLayout
        android:id="@+id/button_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginVertical="8dp"
        android:gravity="end"
        android:orientation="horizontal">



        <Button
            android:id="@+id/cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:minWidth="64dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/confirm_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:minWidth="64dp"
            android:text="@string/confirm" />
    </LinearLayout>
</LinearLayout>