<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:padding="5dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
	android:background="@color/backgroundColor"
    tools:context="com.example.as.activity.MainActivity"
	android:gravity="center">
	<TextView
		android:id="@+id/login_title"
		android:gravity="center"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/app_name"
		android:textSize="54sp"
		/>
	<!-- 添加“请输入密码”文本框 TextView-->
	<TextView android:id="@+id/login_user_id"
		android:layout_width="wrap_content"
		android:layout_height="64dp"
		android:layout_below="@id/login_title"
		android:text="@string/passworld"
		android:textSize="25sp"
		android:textColor="#8C6931"
	/>
	<!-- 添加输入密码的编辑框EditText -->
	<EditText android:id="@+id/txtPwd"
		android:layout_width="match_parent"
		android:layout_height="64dp"
		android:layout_below="@id/login_user_id"
		android:inputType="textPassword"
		android:hint="@string/input_your_password"
	/>
	<!-- 添加“取消”按钮 -->
	<Button android:id="@+id/btnsetCancel"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtPwd"
		android:layout_alignParentRight="true"
		android:layout_marginLeft="10dp"
		android:layout_marginRight="100dp"
		android:text="@string/cancel"
		android:textSize="32dp"
	/>
	<!-- 添加“设置”按钮 -->
	<Button android:id="@+id/btnSet"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/txtPwd"
		android:layout_toLeftOf="@id/btnsetCancel"
		android:text="@string/Set"
		android:textSize="32dp"
	/>	
</RelativeLayout>
