<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_margin="@dimen/margin_m">

    <TextView
        android:id="@+id/login_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_s"
        android:gravity="center"
        android:maxLines="1"
        android:padding="@dimen/padding_s"
        android:text="@string/appName"
        android:textSize="@dimen/text_l" />

    <EditText
        android:text="Jack"
        android:id="@+id/login_user_id"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/login_title"
        android:layout_marginStart="@dimen/margin_s"
        android:layout_marginTop="@dimen/margin_s"
        android:layout_marginEnd="@dimen/margin_s"
        android:layout_marginBottom="@dimen/margin_s"
        android:hint="@string/input_username"
        android:inputType="text"
        android:maxLines="1"
        android:padding="@dimen/padding_s"
        android:textSize="@dimen/text_m" />

    <EditText
        android:text="1234"
        android:id="@+id/login_passwd"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/login_user_id"
        android:layout_margin="@dimen/margin_s"
        android:hint="@string/input_your_password"
        android:inputType="textPassword"
        android:padding="@dimen/padding_s"
        android:textSize="@dimen/text_m" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_passwd"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="30dp"
        android:layout_toStartOf="@id/button_login"
        android:gravity="center"
        android:padding="@dimen/padding_s"
        android:text="@string/register"
        android:textSize="@dimen/text_m" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_passwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/enter"
        android:textSize="@dimen/text_m" />

    <Button
        android:id="@+id/button_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_passwd"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@id/button_login"
        android:gravity="center"
        android:padding="@dimen/padding_s"
        android:text="@string/cancel"
        android:textSize="@dimen/text_m" />


</RelativeLayout>
